force-app/main/default/objects/Order/fields/AVA_SFCPQ__Inclusive_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCPQ__Inclusive_Tax_Amount__c</fullName>
    <inlineHelpText>If tax has been indicated to be included for any line items, this is the sum of those included tax amounts</inlineHelpText>
    <label>Inclusive Tax Amount</label>
    <summarizedField>OrderItem.AVA_SFCPQ__Inclusive_Tax_Amount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>