force-app/main/default/objects/Order/fields/Billed_Amount_Without_Tax_USD__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amount_Without_Tax_USD__c</fullName>
    <formula>IF(TEXT(CurrencyIsoCode) &lt;&gt; &apos;USD&apos; ,  blng__BilledAmountwithouttax__c * CURRENCYRATE(TEXT(CurrencyIsoCode)), blng__BilledAmountwithouttax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Amount Without Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>