force-app/main/default/objects/Order/fields/Billed_Tax_USD__c.field-meta.xml
<CustomField>
    <fullName>Billed_Tax_USD__c</fullName>
    <formula>IF(TEXT( CurrencyIsoCode )&lt;&gt; &apos;USD&apos;,blng__BilledTax__c*CURRENCYRATE(TEXT(CurrencyIsoCode)) ,blng__BilledTax__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billed Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>