force-app/main/default/objects/Order/fields/Canceled_Billing_Amount_W_o_Tax_USD__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Billing_Amount_W_o_Tax_USD__c</fullName>
    <formula>IF( TEXT( CurrencyIsoCode ) &lt;&gt; &apos;USD&apos; ,  blng__CanceledBillings__c *  CURRENCYRATE( TEXT(CurrencyIsoCode ) ) , blng__CanceledBillings__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Canceled Billing Amount W/o Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>