force-app/main/default/objects/Order/fields/Estimated_Tax_USD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Tax_USD__c</fullName>
    <formula>IF( TEXT( CurrencyIsoCode )&lt;&gt;&apos;USD&apos; ,  SBQQ__TaxAmount__c * CURRENCYRATE( TEXT(CurrencyIsoCode ) ) , SBQQ__TaxAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>