force-app/main/default/objects/Order/fields/OP4I_Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_Name__c</fullName>
    <label>Deal Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>