force-app/main/default/objects/Order/fields/OP4IDealID__c.field-meta.xml
<CustomField>
    <fullName>OP4IDealID__c</fullName>
    <externalId>true</externalId>
    <label>OP4I Deal ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>