force-app/main/default/objects/Order/fields/Override_billing_date_formula__c.field-meta.xml
<CustomField>
    <fullName>Override_billing_date_formula__c</fullName>
    <description>Returns Overrde next billing date for this order</description>
    <formula>IF(ISBLANK(SBQQ__Quote__r.Override_Next_Billing_date__c),  DATEVALUE(ActivatedDate) , SBQQ__Quote__r.Override_Next_Billing_date__c )</formula>
    <label>Override billing date formula</label>
    <type>Date</type>
</CustomField>