force-app/main/default/objects/Order/fields/Pending_Billing_Amount_Without_Tax_USD__c.field-meta.xml
<CustomField>
    <fullName>Pending_Billing_Amount_Without_Tax_USD__c</fullName>
    <formula>IF( TEXT( CurrencyIsoCode )&lt;&gt;&apos;USD&apos; ,  blng__PendingBillings__c * CURRENCYRATE( TEXT(CurrencyIsoCode ) ) , blng__PendingBillings__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Billing Amount Without Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>