force-app/main/default/objects/Order/fields/Ramping_Users__c.field-meta.xml
<CustomField>
    <fullName>Ramping_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field built according to US#BIZ-47145</description>
    <label>Ramping Users</label>
    <type>Checkbox</type>
</CustomField>