force-app/main/default/objects/Order/fields/SF_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>SF_Exchange_Rate__c</fullName>
    <formula>CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF Exchange Rate</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>