force-app/main/default/objects/Order/fields/SFA__c.field-meta.xml
<CustomField>
    <fullName>SFA__c</fullName>
    <label>SFA ( % )</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>