force-app/main/default/objects/Order/fields/SFDC_Services_Project__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Services_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>added lookup to related Project record - BIZ-47312</description>
    <label>SFDC Services Project</label>
    <referenceTo>SFDC_Services_Project__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>