force-app/main/default/objects/Order/fields/Software_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Software_Payment_Terms__c</fullName>
    <description>twin field from Quote to track custom Payment Term for Software for BIZ-47433</description>
    <label>Software Days Payment Due (Net x,1st Yr)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due on receipt</fullName>
            </value>
            <value>
                <fullName>Net 7</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Net 120</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>