force-app/main/default/objects/Order/fields/Total_Billings_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Billings_USD__c</fullName>
    <formula>IF( TEXT( CurrencyIsoCode )&lt;&gt; &apos;USD&apos; ,  blng__TotalBilling__c * CURRENCYRATE(TEXT( CurrencyIsoCode )) , blng__TotalBilling__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billings (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>