force-app/main/default/objects/Order/fields/Uplift__c.field-meta.xml
<CustomField>
    <fullName>Uplift__c</fullName>
    <label>Uplift %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>