force-app/main/default/objects/Order/validationRules/NS_Document_Number_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_Document_Number_Needed</fullName>
    <active>true</active>
    <description>NetSuite Document Number need for bill now</description>
    <errorConditionFormula>AND(
     ISBLANK(NetSuite_Document_Number__c),
      ISCHANGED( Latest_Bill_Now_Date_Time__c )
)</errorConditionFormula>
    <errorMessage>Please Contract this Order before creating an Invoice.</errorMessage>
</ValidationRule>