force-app/main/default/objects/Order/listViews/AllActivatedOrders.listView-meta.xml
<ListView>
    <fullName>AllActivatedOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>ORDER.ORDER_REFERENCE_NUMBER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <filters>
        <field>Deal_Type__c</field>
        <operation>equals</operation>
        <value>Add-On</value>
    </filters>
    <label>All Activated Orders</label>
</ListView>