force-app/main/default/objects/Order/listViews/AllDraftOrders.listView-meta.xml
<ListView>
    <fullName>AllDraftOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>ORDERS.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>All Draft Orders</label>
</ListView>