force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>NetSuite_Sales_order_Internal_Id__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>NetSuite_Order_Id__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>NS_Order_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deal_Type__c</field>
        <operation>equals</operation>
        <value>Add-On</value>
    </filters>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>All Orders</label>
</ListView>